src/components/carousel/styles.scss
.interactive-atom {


  .swiper-button {
    width: 45px;
    height: 45px;

    background: #fff;
    border-radius: 50%;
    background-color: #c70000;
    opacity: 0.7;
    top: 200px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: 25px;
     @include mq(mobileLandscape) {
              width: 60px;
              height: 60px;
              background-size: 32px;
      }
    @include mq(desktop) {
      top: 380px;
    }


    &.swiper-button-disabled {
      display: none;
    }
    &.swiper-button-prev {
      left: 10px;
      right: auto;
      background-image:url("<%= path %>/assets/left_arrow.svg");
       @include mq(phabletSmall) {
            left: 20px;
      }
      //display: none;
    }
    &.swiper-button-next{
      //display: none;
      right: 10px;
      left: auto;
      background-image:url("<%= path %>/assets/right_arrow.svg");
       @include mq(phabletSmall) {
            right: 20px;
      }
    }
  }

  .gv-carousel {

    clear: both;

    &::after {
      @include mq(leftCol) {
        content:'';
        border-right: 1px solid white;
        display: block;
        position: absolute;
        top: -8px;
        left: 169px;
        height: calc(100% + 28px);
      }
      @include mq(wide) {
        top: -8px;
        left: 249px;
        height: calc(100% + 28px);
      }
    }

    // .swiper-wrapper__center {
    //   justify-content: center;
    //   margin: 0 auto;
    // }



     .swiper-dummy {
      display: block;
    position: absolute;
    width: calc((100% - 300px) / 2);
     border-left: 10px solid #fff;

     @include mq(mobileLandscape) {
        border-left: 20px solid #fff;
    }
    @include mq(phabletSmall) {
        width: calc((100% - 460px) / 2);
        border-left: 20px solid #fff;
    }
    @include mq(phablet) {
        border-left: 20px solid #fff;
    }
    @include mq(tablet) {
        //border-left: 10px solid #fff;
    }
     @include mq(desktop) {
        width: calc((100% - 540px) / 2);
        border-left: 10px solid #fff;
        display: none;
     }

    }

    


  .swiper-pagination {
//margin-left: 50px;
  }



  // .swiper-margin-wrapper {
  //   margin-left: 0;
  //   transition: margin 150ms;
  //   transition-delay: 50ms;
  //   transition-timing-function: ease-in-out;


     // &.carousel-centered {
     //     margin-left: calc((100% - 300px) / 2)!important;

     //  @include mq(phabletSmall) {
     //       margin-left: calc((100% - 460px) / 2)!important;
     //  }
     //   @include mq(desktop) {
     //         margin-left: calc((100% - 540px) / 2)!important;
     //  }
     //  }
  //}

 .swiper-container {
      height: 502px;
      margin-bottom: 20px;
      overflow: visible!important;
      padding-top: 0px;
      padding-bottom: 50px;


      @include mq(phabletSmall) {
            height: 658px;
      }
       @include mq(desktop) {
            height: 724px;
      }
      @include mq(leftCol) {
           padding-top: 50px;
     }

    }

    .swiper-wrapper {
      transition-timing-function: ease-out;
      //background: #fff;
      margin-left: 0!important;
      //transition: margin 150ms;
    //transition-delay: 50ms;
    //transition-timing-function: ease-in-out;

      //  @include mq(mobileLandscape) {
      //       margin-left: 20px!important;
      // }
      // @include mq(mobileLandscape) {
      //       margin-left: 0px!important;
      // }

       @include mq(tablet) {
            margin-left: 40px!important;
      }

      @include mq(desktop) {
            margin-left: 0px!important;
      }

      @include mq(leftCol) {
            margin-left: -10px!important;
      }

      // &.swiper-centered {

      //     @include mq(phabletSmall) {
      //      margin-left: calc((100% - 460px) / 1)!important;
      // }



      // }

    }
    .swiper-slide {
      position: relative;
      //text-align: center;
      font-size: 18px;
      //background: #fff;
      /* Center slide text vertically */
      // display: -webkit-box;
      // display: -ms-flexbox;
      // display: -webkit-flex;
      // display: flex;
      // -webkit-box-pack: center;
      // -ms-flex-pack: center;
      // -webkit-justify-content: center;
      // justify-content: center;
      // -webkit-box-align: center;
      // -ms-flex-align: center;
      // -webkit-align-items: center;
      // align-items: center;
      width: auto;
      // background: #c70000;
      //width: 60%;
       height: 100%;
      width: 300px;

       @include mq(phabletSmall) {
           width: 460px;

      }

        @include mq(desktop) {
           width: 500px;
      }
    }


 .swiper-container {
    img, video {
      //min-width: 100%;
      //min-height: 100%;
      //object-position: 50% 50%;
      //object-fit: cover;
    }

  .carousel-pagination {

    //margin-left: -50px;
    bottom: 0px;

     @include mq(tablet) {
           left: 40px;
      }

     @include mq(desktop) {
           left: -60px;
      }



    .swiper-pagination-bullet {
  width: 8px;
  height: 8px;
  background: #fff;
  border-radius: 50%;
  margin-left: 5px;
  display: inline-block;
  border: 1px solid #999;
  opacity: 1;
}

.dot:nth-of-type(1) {
margin-left: 0;
}

.swiper-pagination-bullet-active {
  background: #c70000;
   border: 1px solid #c70000;
}

}

   .visual-element--image {
      //width: 100%;
      width: 100%;

      .visual-image {
        //height: 100%;
        width: 100%;
        //width: 100%;
      }
    }

       .carousel-caption {

      position: relative;
      color: #fff;
      left: 0;
      top: -24px;


      .carousel-caption-heading {
        @include f-headline;
        font-weight: bold;
        font-size: 20px;
        line-height: 24px;
        display: inline-block;
        margin-top: -35px;
        padding-left: 10px;
        padding-right: 10px;
        padding-top: 4px;
        background: $news-red;
        @include mq(desktop) {
          font-size: 22px;
          line-height: 28px;
        }
      }

      .carousel-caption-copy {
        @include f-headline;
        font-weight: 400;
        font-style: italic;
        font-size: 18px;
        line-height: 22px;
        padding-bottom: 12px;
        margin-top: -7px;
        padding-top: 7px;
        padding-left: 10px;
        padding-right: 10px;
        min-height: 132px;
        display: inline-block;
        background: $news-red;

        @include mq(phabletSmall) {
          min-height: 88px;
        }

        @include mq(desktop) {
          font-size: 20px;
          line-height: 26px;
          min-height: 104px;
        }

        &:before {
          content: "";
          display: block;
        }
      }
    }
  }


}

}

